layout issues of debug drawer

--- a/src/components/debug/DebugItems/styles/debugItemsList.scss
+++ b/src/components/debug/DebugItems/styles/debugItemsList.scss
@@ -1,13 +1,29 @@
 @import 'components/styles/import.scss';
 
+.debug-items {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+
+  .tabs {
+    flex: 0;
+  }
+
+  .items {
+    flex: 1;
+    background-color: white;
+  }
+}
+
 .debug-items-list {
-  background-color: white;
   padding: 1rem 0.5rem;
   border-top: 2px solid $color-highlighted;
+  height: calc(100% - 2rem);
 
   @include md {
     display: grid;
     grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
+    grid-template-rows: 120px;
   }
 
   .item {
